--- a/portaleSEC/.env
+++ b/portaleSEC/.env
@@ -25,7 +25,7 @@ APP_SECRET=b1facf39d9e1a9dd8bbaf27ed75101fe
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="mysql://dev:dev@db:3306/docker_dev"
+DATABASE_URL="mysql://sql7714738:S39LNbVTr8@sql7.freesqldatabase.com:3306/sql7714738"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
